added template driven form

--- a/src/app/reactive-forms/reactive-forms.component.html
+++ b/src/app/reactive-forms/reactive-forms.component.html
@@ -24,16 +24,16 @@
                 
                  <!--------dynamic forms-->
 
-            <div formArrayName="aliases">
+            <!-- <div formArrayName="aliases">
                 <h2>Aliases</h2>
                 <button type="button" (click)="addAlias()">+ Add another alias</button>
 
-                <div *ngFor="let alias of aliases.controls; let i=index">
+                <div *ngFor="let alias of aliases.controls; let i=index"> -->
                     <!-- The repeated alias template -->
-                    <label for="alias-{{ i }}">Alias:</label>
+                    <!-- <label for="alias-{{ i }}">Alias:</label>
                     <input id="alias-{{ i }}" type="text" [formControlName]="i">
                 </div>
-            </div>
+            </div> -->
                 
                 
                 
